deps: Newtonsoft.Json 导入设置

--- a/.gitignore
+++ b/.gitignore
@@ -632,3 +632,5 @@ Assets/TapTap/Login.meta
 Assets/UB/Install LWRP Fog.unitypackage.meta
 
 ProjectSettings/ProjectVersion.txt
+Assets/Plugins/Newtonsoft.Json.dll
+Assets/Plugins/Newtonsoft.Json.dll.meta
