chore: 移除经常冲突的无关文件

--- a/.gitignore
+++ b/.gitignore
@@ -634,3 +634,5 @@ Assets/UB/Install LWRP Fog.unitypackage.meta
 ProjectSettings/ProjectVersion.txt
 Assets/Plugins/Newtonsoft.Json.dll
 Assets/Plugins/Newtonsoft.Json.dll.meta
+/Assets/Fonts
+Packages/packages-lock.json
